ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
spec:
  ingressClassName: nginx 
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            #name: nginx-service
            name: nginx-nprd-nginx       # <--  helm name
            port:
              number: 80
      - path: /api/status
        pathType: Prefix
        backend:
          service:
            #name: backend-api-service
            name: be-api-nprd-backend-api  # <-- helm name
            port:
              number: 5000
